--- a/LI2/latex/interface_8h.tex
+++ b/LI2/latex/interface_8h.tex
@@ -44,40 +44,40 @@ Função que imprime as jogadas anteriores no ficheiro criado pelo utilizador co
 Coloca jogadas anteriores no ficheiro. \end{quote}
 
 
-Definido na linha 142 do ficheiro interface.\+c.
+Definido na linha 148 do ficheiro interface.\+c.
 
 
 \begin{DoxyCode}{0}
-\DoxyCodeLine{142                                        \{}
-\DoxyCodeLine{143     \textcolor{keywordtype}{int} \mbox{\hyperlink{logica_8h_a9dfbc982d23a619e36575d8e7ec8e41c}{jog}} = \mbox{\hyperlink{dados_8h_ad6e326e4ffa57ca1ae0c75377ecefc8c}{obter\_jogador\_atual}}(e);}
-\DoxyCodeLine{144     \textcolor{keywordtype}{int} num\_jogadas = \mbox{\hyperlink{dados_8h_a6cd0b387bdee9e18003c78852394aa63}{obter\_numero\_de\_jogadas}}(e);}
-\DoxyCodeLine{146     \textcolor{keywordflow}{if} (\mbox{\hyperlink{logica_8h_a9dfbc982d23a619e36575d8e7ec8e41c}{jog}} == 2) \{}
-\DoxyCodeLine{147         \textcolor{keywordflow}{for} (\textcolor{keywordtype}{int} i = 0; i <= num\_jogadas; i++) \{}
-\DoxyCodeLine{148             \textcolor{keywordflow}{if}(i < 9)}
-\DoxyCodeLine{149                 fprintf(fp, \textcolor{stringliteral}{"0\%d: "},i+1);}
-\DoxyCodeLine{150             \textcolor{keywordflow}{else}}
-\DoxyCodeLine{151                 fprintf(fp, \textcolor{stringliteral}{"\%d: "},i+1);}
-\DoxyCodeLine{152             \textcolor{keywordflow}{if} (i != num\_jogadas) \{}
-\DoxyCodeLine{153                 fprintf(fp, \textcolor{stringliteral}{"\%c\%d \%c\%d"}, \mbox{\hyperlink{dados_8h_ad7c3d067f913501d29c5c38c497f2038}{obtem\_dados\_jogadas\_col}}(e,1,i), \mbox{\hyperlink{dados_8h_a0696c119c3f220421804807cc607fcda}{obtem\_dados\_jogadas\_lin}}(e,1,i),}
-\DoxyCodeLine{154                         \mbox{\hyperlink{dados_8h_ad7c3d067f913501d29c5c38c497f2038}{obtem\_dados\_jogadas\_col}}(e,2,i), \mbox{\hyperlink{dados_8h_a0696c119c3f220421804807cc607fcda}{obtem\_dados\_jogadas\_lin}}(e,2,i));}
-\DoxyCodeLine{155             \}}
+\DoxyCodeLine{148                                        \{}
+\DoxyCodeLine{149     \textcolor{keywordtype}{int} \mbox{\hyperlink{logica_8h_a9dfbc982d23a619e36575d8e7ec8e41c}{jog}} = \mbox{\hyperlink{dados_8h_ad6e326e4ffa57ca1ae0c75377ecefc8c}{obter\_jogador\_atual}}(e);}
+\DoxyCodeLine{150     \textcolor{keywordtype}{int} num\_jogadas = \mbox{\hyperlink{dados_8h_a6cd0b387bdee9e18003c78852394aa63}{obter\_numero\_de\_jogadas}}(e);}
+\DoxyCodeLine{152     \textcolor{keywordflow}{if} (\mbox{\hyperlink{logica_8h_a9dfbc982d23a619e36575d8e7ec8e41c}{jog}} == 2) \{}
+\DoxyCodeLine{153         \textcolor{keywordflow}{for} (\textcolor{keywordtype}{int} i = 0; i <= num\_jogadas; i++) \{}
+\DoxyCodeLine{154             \textcolor{keywordflow}{if}(i < 9)}
+\DoxyCodeLine{155                 fprintf(fp, \textcolor{stringliteral}{"0\%d: "},i+1);}
 \DoxyCodeLine{156             \textcolor{keywordflow}{else}}
-\DoxyCodeLine{157                 fprintf(fp,\textcolor{stringliteral}{"\%c\%d"},\mbox{\hyperlink{dados_8h_ad7c3d067f913501d29c5c38c497f2038}{obtem\_dados\_jogadas\_col}}(e,1,i), \mbox{\hyperlink{dados_8h_a0696c119c3f220421804807cc607fcda}{obtem\_dados\_jogadas\_lin}}(e,1,i));}
-\DoxyCodeLine{158             fprintf(fp,\textcolor{stringliteral}{"\(\backslash\)n"});}
-\DoxyCodeLine{159         \}}
-\DoxyCodeLine{160     \}}
-\DoxyCodeLine{161     \textcolor{keywordflow}{if} (\mbox{\hyperlink{logica_8h_a9dfbc982d23a619e36575d8e7ec8e41c}{jog}} == 1) \{}
-\DoxyCodeLine{162         \textcolor{keywordflow}{for} (\textcolor{keywordtype}{int} i = 0; i < num\_jogadas; i++) \{}
-\DoxyCodeLine{163             \textcolor{keywordflow}{if} (i < 10)}
-\DoxyCodeLine{164                 fprintf(fp, \textcolor{stringliteral}{"0\%d: "}, i+1);}
-\DoxyCodeLine{165             \textcolor{keywordflow}{else}}
-\DoxyCodeLine{166                 fprintf(fp, \textcolor{stringliteral}{"\%d: "}, i+1);}
-\DoxyCodeLine{167             fprintf(fp, \textcolor{stringliteral}{"\%c\%d \%c\%d"},  \mbox{\hyperlink{dados_8h_ad7c3d067f913501d29c5c38c497f2038}{obtem\_dados\_jogadas\_col}}(e,1,i), \mbox{\hyperlink{dados_8h_a0696c119c3f220421804807cc607fcda}{obtem\_dados\_jogadas\_lin}}(e,1,i),}
-\DoxyCodeLine{168                     \mbox{\hyperlink{dados_8h_ad7c3d067f913501d29c5c38c497f2038}{obtem\_dados\_jogadas\_col}}(e,2,i), \mbox{\hyperlink{dados_8h_a0696c119c3f220421804807cc607fcda}{obtem\_dados\_jogadas\_lin}}(e,2,i));}
-\DoxyCodeLine{169             fprintf(fp, \textcolor{stringliteral}{"\(\backslash\)n"});}
-\DoxyCodeLine{170         \}}
-\DoxyCodeLine{171     \}}
-\DoxyCodeLine{172 \}}
+\DoxyCodeLine{157                 fprintf(fp, \textcolor{stringliteral}{"\%d: "},i+1);}
+\DoxyCodeLine{158             \textcolor{keywordflow}{if} (i != num\_jogadas) \{}
+\DoxyCodeLine{159                 fprintf(fp, \textcolor{stringliteral}{"\%c\%d \%c\%d"}, \mbox{\hyperlink{dados_8h_ad7c3d067f913501d29c5c38c497f2038}{obtem\_dados\_jogadas\_col}}(e,1,i), \mbox{\hyperlink{dados_8h_a0696c119c3f220421804807cc607fcda}{obtem\_dados\_jogadas\_lin}}(e,1,i),}
+\DoxyCodeLine{160                         \mbox{\hyperlink{dados_8h_ad7c3d067f913501d29c5c38c497f2038}{obtem\_dados\_jogadas\_col}}(e,2,i), \mbox{\hyperlink{dados_8h_a0696c119c3f220421804807cc607fcda}{obtem\_dados\_jogadas\_lin}}(e,2,i));}
+\DoxyCodeLine{161             \}}
+\DoxyCodeLine{162             \textcolor{keywordflow}{else}}
+\DoxyCodeLine{163                 fprintf(fp,\textcolor{stringliteral}{"\%c\%d"},\mbox{\hyperlink{dados_8h_ad7c3d067f913501d29c5c38c497f2038}{obtem\_dados\_jogadas\_col}}(e,1,i), \mbox{\hyperlink{dados_8h_a0696c119c3f220421804807cc607fcda}{obtem\_dados\_jogadas\_lin}}(e,1,i));}
+\DoxyCodeLine{164             fprintf(fp,\textcolor{stringliteral}{"\(\backslash\)n"});}
+\DoxyCodeLine{165         \}}
+\DoxyCodeLine{166     \}}
+\DoxyCodeLine{167     \textcolor{keywordflow}{if} (\mbox{\hyperlink{logica_8h_a9dfbc982d23a619e36575d8e7ec8e41c}{jog}} == 1) \{}
+\DoxyCodeLine{168         \textcolor{keywordflow}{for} (\textcolor{keywordtype}{int} i = 0; i < num\_jogadas; i++) \{}
+\DoxyCodeLine{169             \textcolor{keywordflow}{if} (i < 10)}
+\DoxyCodeLine{170                 fprintf(fp, \textcolor{stringliteral}{"0\%d: "}, i+1);}
+\DoxyCodeLine{171             \textcolor{keywordflow}{else}}
+\DoxyCodeLine{172                 fprintf(fp, \textcolor{stringliteral}{"\%d: "}, i+1);}
+\DoxyCodeLine{173             fprintf(fp, \textcolor{stringliteral}{"\%c\%d \%c\%d"},  \mbox{\hyperlink{dados_8h_ad7c3d067f913501d29c5c38c497f2038}{obtem\_dados\_jogadas\_col}}(e,1,i), \mbox{\hyperlink{dados_8h_a0696c119c3f220421804807cc607fcda}{obtem\_dados\_jogadas\_lin}}(e,1,i),}
+\DoxyCodeLine{174                     \mbox{\hyperlink{dados_8h_ad7c3d067f913501d29c5c38c497f2038}{obtem\_dados\_jogadas\_col}}(e,2,i), \mbox{\hyperlink{dados_8h_a0696c119c3f220421804807cc607fcda}{obtem\_dados\_jogadas\_lin}}(e,2,i));}
+\DoxyCodeLine{175             fprintf(fp, \textcolor{stringliteral}{"\(\backslash\)n"});}
+\DoxyCodeLine{176         \}}
+\DoxyCodeLine{177     \}}
+\DoxyCodeLine{178 \}}
 
 \end{DoxyCode}
 \mbox{\Hypertarget{interface_8h_aa36b92ddb3d9b1fdb93d8524262ee66c}\label{interface_8h_aa36b92ddb3d9b1fdb93d8524262ee66c}} 
@@ -101,20 +101,20 @@ Função que imprime o tabuleiro no ficheiro criado pelo utilizador com o comand
 Imprime o conteudo do tabuleiro, imprimindo \textquotesingle{}$\ast$\textquotesingle{} no caso de a Peça ser \char`\"{}\+B\+R\+A\+N\+C\+A\char`\"{},\textquotesingle{}\#\textquotesingle{} no caso de a peça ser \char`\"{}\+P\+R\+E\+T\+A\char`\"{}, e \textquotesingle{}.\textquotesingle{} no caso de ser \char`\"{}\+V\+A\+Z\+I\+O\char`\"{}. \end{quote}
 
 
-Definido na linha 129 do ficheiro interface.\+c.
+Definido na linha 135 do ficheiro interface.\+c.
 
 
 \begin{DoxyCode}{0}
-\DoxyCodeLine{129                                            \{}
-\DoxyCodeLine{131     \textcolor{keywordflow}{for} (\textcolor{keywordtype}{int} i = 0; i < 8; i++) \{}
-\DoxyCodeLine{132         \textcolor{keywordflow}{for} (\textcolor{keywordtype}{int} j = 0; j < 8; j++) \{}
-\DoxyCodeLine{133             \textcolor{keywordtype}{char} peca = \mbox{\hyperlink{dados_8h_ad4e371755c518dbe632dc8cb1280cdad}{obter\_casa}}(e, i, j);}
-\DoxyCodeLine{134             fprintf(fp, \textcolor{stringliteral}{"\%c"}, peca);}
-\DoxyCodeLine{135         \}}
-\DoxyCodeLine{136         fprintf(fp, \textcolor{stringliteral}{"\(\backslash\)n"});}
-\DoxyCodeLine{137     \}}
-\DoxyCodeLine{138     fprintf(fp, \textcolor{stringliteral}{"\(\backslash\)n"});}
-\DoxyCodeLine{139 \}}
+\DoxyCodeLine{135                                            \{}
+\DoxyCodeLine{137     \textcolor{keywordflow}{for} (\textcolor{keywordtype}{int} i = 0; i < 8; i++) \{}
+\DoxyCodeLine{138         \textcolor{keywordflow}{for} (\textcolor{keywordtype}{int} j = 0; j < 8; j++) \{}
+\DoxyCodeLine{139             \textcolor{keywordtype}{char} peca = \mbox{\hyperlink{dados_8h_ad4e371755c518dbe632dc8cb1280cdad}{obter\_casa}}(e, i, j);}
+\DoxyCodeLine{140             fprintf(fp, \textcolor{stringliteral}{"\%c"}, peca);}
+\DoxyCodeLine{141         \}}
+\DoxyCodeLine{142         fprintf(fp, \textcolor{stringliteral}{"\(\backslash\)n"});}
+\DoxyCodeLine{143     \}}
+\DoxyCodeLine{144     fprintf(fp, \textcolor{stringliteral}{"\(\backslash\)n"});}
+\DoxyCodeLine{145 \}}
 
 \end{DoxyCode}
 \mbox{\Hypertarget{interface_8h_a24da95ebeede4a540e37790ce8be359b}\label{interface_8h_a24da95ebeede4a540e37790ce8be359b}} 
@@ -186,38 +186,44 @@ Definido na linha 54 do ficheiro interface.\+c.
 \DoxyCodeLine{92                 \textcolor{keywordflow}{else}}
 \DoxyCodeLine{93                     printf(\textcolor{stringliteral}{"A posição escolhida nao e valida!\(\backslash\)n"});}
 \DoxyCodeLine{94             \}}
-\DoxyCodeLine{95             \textcolor{keywordflow}{else} \textcolor{keywordflow}{if} (strncmp(linha, \textcolor{stringliteral}{"jog"}, 3) == 0) \{}
-\DoxyCodeLine{96                 printf(\textcolor{stringliteral}{"O bot jogou na sua vez.\(\backslash\)n"});}
-\DoxyCodeLine{97                 \mbox{\hyperlink{logica_8h_a9dfbc982d23a619e36575d8e7ec8e41c}{jog}}(e);}
-\DoxyCodeLine{98             \}}
-\DoxyCodeLine{99             \textcolor{comment}{//Caso nao se pretenda efetuar nenhum comando mas sim uma jogada.}}
-\DoxyCodeLine{100         \textcolor{keywordflow}{if} (strlen(linha) == 3 \&\& sscanf(linha, \textcolor{stringliteral}{"\%[a-\/h]\%[1-\/8]"}, col, lin) == 2) \{}
-\DoxyCodeLine{101             \mbox{\hyperlink{struct_c_o_o_r_d_e_n_a_d_a}{COORDENADA}} coord = \{*col -\/ \textcolor{charliteral}{'a'}, *lin -\/ \textcolor{charliteral}{'1'}\};}
-\DoxyCodeLine{102             \textcolor{comment}{//Caso seja feita uma jogada, colocamos o valor máximo do comando pos = ao valor da jogada atual.}}
-\DoxyCodeLine{103             \mbox{\hyperlink{dados_8h_ae46fb285155bff2316804318ef6f0fc6}{set\_max}}(e);}
-\DoxyCodeLine{104             \textcolor{keywordflow}{if}(\mbox{\hyperlink{logica_8h_ac313d7e553b1e2b5f266acb9bfff8141}{jogar}}(e,coord) == 0)}
-\DoxyCodeLine{105                 printf(\textcolor{stringliteral}{"Jogada Invalida. \(\backslash\)n"});}
-\DoxyCodeLine{106         \}}
-\DoxyCodeLine{107     \}}
-\DoxyCodeLine{108     \textcolor{comment}{//Verifica qual dos jogadores congratular no final do jogo.}}
-\DoxyCodeLine{109     \textcolor{keywordflow}{if} (\mbox{\hyperlink{logica_8h_aea1fcb269536a2b7ee0d12518887cd09}{jogo\_terminado}}(e) == 1) \{}
-\DoxyCodeLine{110         \mbox{\hyperlink{interface_8h_a14932179629d49fade0db78a3136d787}{mostrar\_tabuleiro\_final}}(e);}
-\DoxyCodeLine{111         printf(\textcolor{stringliteral}{"Parabens!! O jogador 1 ganha!\(\backslash\)n"});}
-\DoxyCodeLine{112     \}}
-\DoxyCodeLine{113     \textcolor{keywordflow}{else} \textcolor{keywordflow}{if} (\mbox{\hyperlink{logica_8h_aea1fcb269536a2b7ee0d12518887cd09}{jogo\_terminado}}(e) == 2) \{}
-\DoxyCodeLine{114         \mbox{\hyperlink{interface_8h_a14932179629d49fade0db78a3136d787}{mostrar\_tabuleiro\_final}}(e);}
-\DoxyCodeLine{115         printf(\textcolor{stringliteral}{"Parabens!! O jogador 2 ganha! \(\backslash\)n"});}
-\DoxyCodeLine{116     \}}
-\DoxyCodeLine{117     \textcolor{keywordflow}{else} \textcolor{keywordflow}{if} (\mbox{\hyperlink{logica_8h_aea1fcb269536a2b7ee0d12518887cd09}{jogo\_terminado}}(e) == 3) \{}
-\DoxyCodeLine{118         \mbox{\hyperlink{interface_8h_a14932179629d49fade0db78a3136d787}{mostrar\_tabuleiro\_final}}(e);}
-\DoxyCodeLine{119         printf(\textcolor{stringliteral}{"Acabaram-\/se as jogadas! Ninguém ganhou. \(\backslash\)n"});}
-\DoxyCodeLine{120     \}}
-\DoxyCodeLine{121     \textcolor{keywordflow}{else} \textcolor{keywordflow}{if} (\mbox{\hyperlink{logica_8h_aea1fcb269536a2b7ee0d12518887cd09}{jogo\_terminado}}(e) == 4) \{}
-\DoxyCodeLine{122         \mbox{\hyperlink{interface_8h_a14932179629d49fade0db78a3136d787}{mostrar\_tabuleiro\_final}}(e);}
-\DoxyCodeLine{123         printf(\textcolor{stringliteral}{"A peca ficou encurralada, e um empate!\(\backslash\)n"});}
-\DoxyCodeLine{124     \}}
-\DoxyCodeLine{125     \textcolor{keywordflow}{return} 1;}
-\DoxyCodeLine{126 \}}
+\DoxyCodeLine{95             \textcolor{keywordflow}{else} \textcolor{keywordflow}{if} (strncmp(linha, \textcolor{stringliteral}{"jog2"}, 4) == 0) \{}
+\DoxyCodeLine{96                 printf(\textcolor{stringliteral}{"\#=> O bot jogou na sua vez.\(\backslash\)n"});}
+\DoxyCodeLine{97                 \textcolor{comment}{//best\_move(e);}}
+\DoxyCodeLine{98                 \mbox{\hyperlink{logica_8h_a75a3c6feb2f2ec713f96559558b136d0}{jog2}}(e);}
+\DoxyCodeLine{99             \}}
+\DoxyCodeLine{100             \textcolor{keywordflow}{else} \textcolor{keywordflow}{if} (strncmp(linha, \textcolor{stringliteral}{"jog"}, 3) == 0) \{}
+\DoxyCodeLine{101                 printf(\textcolor{stringliteral}{"\#=> O bot jogou na sua vez.\(\backslash\)n"});}
+\DoxyCodeLine{102                 \mbox{\hyperlink{logica_8h_a9dfbc982d23a619e36575d8e7ec8e41c}{jog}}(e);}
+\DoxyCodeLine{103             \}}
+\DoxyCodeLine{104             \textcolor{comment}{//Caso nao se pretenda efetuar nenhum comando mas sim uma jogada.}}
+\DoxyCodeLine{105         \textcolor{keywordflow}{if} (strlen(linha) == 3 \&\& sscanf(linha, \textcolor{stringliteral}{"\%[a-\/h]\%[1-\/8]"}, col, lin) == 2) \{}
+\DoxyCodeLine{106             \mbox{\hyperlink{struct_c_o_o_r_d_e_n_a_d_a}{COORDENADA}} coord = \{*col -\/ \textcolor{charliteral}{'a'}, *lin -\/ \textcolor{charliteral}{'1'}\};}
+\DoxyCodeLine{107             \textcolor{comment}{//Caso seja feita uma jogada, colocamos o valor máximo do comando pos = ao valor da jogada atual.}}
+\DoxyCodeLine{108             \mbox{\hyperlink{dados_8h_ae46fb285155bff2316804318ef6f0fc6}{set\_max}}(e);}
+\DoxyCodeLine{109             printf(\textcolor{stringliteral}{"jogar: \%d \%d\(\backslash\)n"}, coord.coluna, coord.linha);}
+\DoxyCodeLine{110             \textcolor{keywordflow}{if}(\mbox{\hyperlink{logica_8h_ac313d7e553b1e2b5f266acb9bfff8141}{jogar}}(e,coord) == 0)}
+\DoxyCodeLine{111                 printf(\textcolor{stringliteral}{"Jogada Invalida. \(\backslash\)n"});}
+\DoxyCodeLine{112         \}}
+\DoxyCodeLine{113     \}}
+\DoxyCodeLine{114     \textcolor{comment}{//Verifica qual dos jogadores congratular no final do jogo.}}
+\DoxyCodeLine{115     \textcolor{keywordflow}{if} (\mbox{\hyperlink{logica_8h_aea1fcb269536a2b7ee0d12518887cd09}{jogo\_terminado}}(e) == 1) \{}
+\DoxyCodeLine{116         \mbox{\hyperlink{interface_8h_a14932179629d49fade0db78a3136d787}{mostrar\_tabuleiro\_final}}(e);}
+\DoxyCodeLine{117         printf(\textcolor{stringliteral}{"Parabens!! O jogador 1 ganha!\(\backslash\)n"});}
+\DoxyCodeLine{118     \}}
+\DoxyCodeLine{119     \textcolor{keywordflow}{else} \textcolor{keywordflow}{if} (\mbox{\hyperlink{logica_8h_aea1fcb269536a2b7ee0d12518887cd09}{jogo\_terminado}}(e) == 2) \{}
+\DoxyCodeLine{120         \mbox{\hyperlink{interface_8h_a14932179629d49fade0db78a3136d787}{mostrar\_tabuleiro\_final}}(e);}
+\DoxyCodeLine{121         printf(\textcolor{stringliteral}{"Parabens!! O jogador 2 ganha! \(\backslash\)n"});}
+\DoxyCodeLine{122     \}}
+\DoxyCodeLine{123     \textcolor{keywordflow}{else} \textcolor{keywordflow}{if} (\mbox{\hyperlink{logica_8h_aea1fcb269536a2b7ee0d12518887cd09}{jogo\_terminado}}(e) == 3) \{}
+\DoxyCodeLine{124         \mbox{\hyperlink{interface_8h_a14932179629d49fade0db78a3136d787}{mostrar\_tabuleiro\_final}}(e);}
+\DoxyCodeLine{125         printf(\textcolor{stringliteral}{"Acabaram-\/se as jogadas! Ninguém ganhou. \(\backslash\)n"});}
+\DoxyCodeLine{126     \}}
+\DoxyCodeLine{127     \textcolor{keywordflow}{else} \textcolor{keywordflow}{if} (\mbox{\hyperlink{logica_8h_aea1fcb269536a2b7ee0d12518887cd09}{jogo\_terminado}}(e) == 4) \{}
+\DoxyCodeLine{128         \mbox{\hyperlink{interface_8h_a14932179629d49fade0db78a3136d787}{mostrar\_tabuleiro\_final}}(e);}
+\DoxyCodeLine{129         printf(\textcolor{stringliteral}{"A peca ficou encurralada, e um empate!\(\backslash\)n"});}
+\DoxyCodeLine{130     \}}
+\DoxyCodeLine{131     \textcolor{keywordflow}{return} 1;}
+\DoxyCodeLine{132 \}}
 
 \end{DoxyCode}
 \mbox{\Hypertarget{interface_8h_aa0b6c1689e60ac852a73d67e066c1df5}\label{interface_8h_aa0b6c1689e60ac852a73d67e066c1df5}} 
@@ -330,39 +336,39 @@ Função que mostra todas as jogadas efetuadas até ao momento em que o utilizad
 Obtem o numero do jogador atual e, dependedo desse numero, decide se tem de imprimir um ou dois movimentos numa dada jogada. \end{quote}
 
 
-Definido na linha 174 do ficheiro interface.\+c.
+Definido na linha 180 do ficheiro interface.\+c.
 
 
 \begin{DoxyCode}{0}
-\DoxyCodeLine{174                      \{}
-\DoxyCodeLine{175         \textcolor{keywordtype}{int} \mbox{\hyperlink{logica_8h_a9dfbc982d23a619e36575d8e7ec8e41c}{jog}} = \mbox{\hyperlink{dados_8h_ad6e326e4ffa57ca1ae0c75377ecefc8c}{obter\_jogador\_atual}}(e);}
-\DoxyCodeLine{176         \textcolor{keywordtype}{int} num\_jogadas = \mbox{\hyperlink{dados_8h_a6cd0b387bdee9e18003c78852394aa63}{obter\_numero\_de\_jogadas}}(e);}
-\DoxyCodeLine{178         \textcolor{keywordflow}{if} (\mbox{\hyperlink{logica_8h_a9dfbc982d23a619e36575d8e7ec8e41c}{jog}} == 2) \{}
-\DoxyCodeLine{179             \textcolor{keywordflow}{for} (\textcolor{keywordtype}{int} i = 0; i <= num\_jogadas; i++) \{}
-\DoxyCodeLine{180                 \textcolor{keywordflow}{if}(i < 9)}
-\DoxyCodeLine{181                     printf(\textcolor{stringliteral}{"0\%d: "},i+1);}
-\DoxyCodeLine{182                 \textcolor{keywordflow}{else}}
-\DoxyCodeLine{183                     printf(\textcolor{stringliteral}{"\%d: "},i+1);}
-\DoxyCodeLine{184                 \textcolor{keywordflow}{if} (i != num\_jogadas) \{}
-\DoxyCodeLine{185                     printf(\textcolor{stringliteral}{"\%c\%d \%c\%d"}, \mbox{\hyperlink{dados_8h_ad7c3d067f913501d29c5c38c497f2038}{obtem\_dados\_jogadas\_col}}(e,1,i), \mbox{\hyperlink{dados_8h_a0696c119c3f220421804807cc607fcda}{obtem\_dados\_jogadas\_lin}}(e,1,i),}
-\DoxyCodeLine{186                             \mbox{\hyperlink{dados_8h_ad7c3d067f913501d29c5c38c497f2038}{obtem\_dados\_jogadas\_col}}(e,2,i), \mbox{\hyperlink{dados_8h_a0696c119c3f220421804807cc607fcda}{obtem\_dados\_jogadas\_lin}}(e,2,i));}
-\DoxyCodeLine{187                 \}}
+\DoxyCodeLine{180                      \{}
+\DoxyCodeLine{181         \textcolor{keywordtype}{int} \mbox{\hyperlink{logica_8h_a9dfbc982d23a619e36575d8e7ec8e41c}{jog}} = \mbox{\hyperlink{dados_8h_ad6e326e4ffa57ca1ae0c75377ecefc8c}{obter\_jogador\_atual}}(e);}
+\DoxyCodeLine{182         \textcolor{keywordtype}{int} num\_jogadas = \mbox{\hyperlink{dados_8h_a6cd0b387bdee9e18003c78852394aa63}{obter\_numero\_de\_jogadas}}(e);}
+\DoxyCodeLine{184         \textcolor{keywordflow}{if} (\mbox{\hyperlink{logica_8h_a9dfbc982d23a619e36575d8e7ec8e41c}{jog}} == 2) \{}
+\DoxyCodeLine{185             \textcolor{keywordflow}{for} (\textcolor{keywordtype}{int} i = 0; i <= num\_jogadas; i++) \{}
+\DoxyCodeLine{186                 \textcolor{keywordflow}{if}(i < 9)}
+\DoxyCodeLine{187                     printf(\textcolor{stringliteral}{"0\%d: "},i+1);}
 \DoxyCodeLine{188                 \textcolor{keywordflow}{else}}
-\DoxyCodeLine{189                     printf(\textcolor{stringliteral}{"\%c\%d"},\mbox{\hyperlink{dados_8h_ad7c3d067f913501d29c5c38c497f2038}{obtem\_dados\_jogadas\_col}}(e,1,i), \mbox{\hyperlink{dados_8h_a0696c119c3f220421804807cc607fcda}{obtem\_dados\_jogadas\_lin}}(e,1,i));}
-\DoxyCodeLine{190                 printf(\textcolor{stringliteral}{"\(\backslash\)n"});}
-\DoxyCodeLine{191             \}}
-\DoxyCodeLine{192         \}}
-\DoxyCodeLine{193         \textcolor{keywordflow}{if} (\mbox{\hyperlink{logica_8h_a9dfbc982d23a619e36575d8e7ec8e41c}{jog}} == 1) \{}
-\DoxyCodeLine{194             \textcolor{keywordflow}{for} (\textcolor{keywordtype}{int} i = 0; i < num\_jogadas; i++) \{}
-\DoxyCodeLine{195                 \textcolor{keywordflow}{if} (i < 10)}
-\DoxyCodeLine{196                     printf(\textcolor{stringliteral}{"0\%d: "}, i+1);}
-\DoxyCodeLine{197                 \textcolor{keywordflow}{else}}
-\DoxyCodeLine{198                     printf(\textcolor{stringliteral}{"\%d: "}, i+1);}
-\DoxyCodeLine{199                 printf( \textcolor{stringliteral}{"\%c\%d \%c\%d"},  \mbox{\hyperlink{dados_8h_ad7c3d067f913501d29c5c38c497f2038}{obtem\_dados\_jogadas\_col}}(e,1,i), \mbox{\hyperlink{dados_8h_a0696c119c3f220421804807cc607fcda}{obtem\_dados\_jogadas\_lin}}(e,1,i),}
-\DoxyCodeLine{200                         \mbox{\hyperlink{dados_8h_ad7c3d067f913501d29c5c38c497f2038}{obtem\_dados\_jogadas\_col}}(e,2,i), \mbox{\hyperlink{dados_8h_a0696c119c3f220421804807cc607fcda}{obtem\_dados\_jogadas\_lin}}(e,2,i));}
-\DoxyCodeLine{201                 printf(\textcolor{stringliteral}{"\(\backslash\)n"});}
-\DoxyCodeLine{202             \}}
-\DoxyCodeLine{203         \}}
-\DoxyCodeLine{204 \}}
+\DoxyCodeLine{189                     printf(\textcolor{stringliteral}{"\%d: "},i+1);}
+\DoxyCodeLine{190                 \textcolor{keywordflow}{if} (i != num\_jogadas) \{}
+\DoxyCodeLine{191                     printf(\textcolor{stringliteral}{"\%c\%d \%c\%d"}, \mbox{\hyperlink{dados_8h_ad7c3d067f913501d29c5c38c497f2038}{obtem\_dados\_jogadas\_col}}(e,1,i), \mbox{\hyperlink{dados_8h_a0696c119c3f220421804807cc607fcda}{obtem\_dados\_jogadas\_lin}}(e,1,i),}
+\DoxyCodeLine{192                             \mbox{\hyperlink{dados_8h_ad7c3d067f913501d29c5c38c497f2038}{obtem\_dados\_jogadas\_col}}(e,2,i), \mbox{\hyperlink{dados_8h_a0696c119c3f220421804807cc607fcda}{obtem\_dados\_jogadas\_lin}}(e,2,i));}
+\DoxyCodeLine{193                 \}}
+\DoxyCodeLine{194                 \textcolor{keywordflow}{else}}
+\DoxyCodeLine{195                     printf(\textcolor{stringliteral}{"\%c\%d"},\mbox{\hyperlink{dados_8h_ad7c3d067f913501d29c5c38c497f2038}{obtem\_dados\_jogadas\_col}}(e,1,i), \mbox{\hyperlink{dados_8h_a0696c119c3f220421804807cc607fcda}{obtem\_dados\_jogadas\_lin}}(e,1,i));}
+\DoxyCodeLine{196                 printf(\textcolor{stringliteral}{"\(\backslash\)n"});}
+\DoxyCodeLine{197             \}}
+\DoxyCodeLine{198         \}}
+\DoxyCodeLine{199         \textcolor{keywordflow}{if} (\mbox{\hyperlink{logica_8h_a9dfbc982d23a619e36575d8e7ec8e41c}{jog}} == 1) \{}
+\DoxyCodeLine{200             \textcolor{keywordflow}{for} (\textcolor{keywordtype}{int} i = 0; i < num\_jogadas; i++) \{}
+\DoxyCodeLine{201                 \textcolor{keywordflow}{if} (i < 10)}
+\DoxyCodeLine{202                     printf(\textcolor{stringliteral}{"0\%d: "}, i+1);}
+\DoxyCodeLine{203                 \textcolor{keywordflow}{else}}
+\DoxyCodeLine{204                     printf(\textcolor{stringliteral}{"\%d: "}, i+1);}
+\DoxyCodeLine{205                 printf( \textcolor{stringliteral}{"\%c\%d \%c\%d"},  \mbox{\hyperlink{dados_8h_ad7c3d067f913501d29c5c38c497f2038}{obtem\_dados\_jogadas\_col}}(e,1,i), \mbox{\hyperlink{dados_8h_a0696c119c3f220421804807cc607fcda}{obtem\_dados\_jogadas\_lin}}(e,1,i),}
+\DoxyCodeLine{206                         \mbox{\hyperlink{dados_8h_ad7c3d067f913501d29c5c38c497f2038}{obtem\_dados\_jogadas\_col}}(e,2,i), \mbox{\hyperlink{dados_8h_a0696c119c3f220421804807cc607fcda}{obtem\_dados\_jogadas\_lin}}(e,2,i));}
+\DoxyCodeLine{207                 printf(\textcolor{stringliteral}{"\(\backslash\)n"});}
+\DoxyCodeLine{208             \}}
+\DoxyCodeLine{209         \}}
+\DoxyCodeLine{210 \}}
 
 \end{DoxyCode}
